Change octal prefix from "0" to "0o"

Leading 0s will be ignored in all bases for all numeric inputs.

BUG: 488728
FEATURE: 487837